# tick

./: .clang-format  .clang-tidy  .clangd  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  build.sh  compile_commands.json  conanfile.txt  getstuff.sh  make_clang.sh  transform.sed  transform.sh
.cache/clangd/index/: main.cpp.0B03588712B9AC2A.idx
.github/workflows/: cmake.yml
cmake/: backwardcpp.cmake  cpprestsdk.cmake  cppzmq.cmake  findunwind.cmake  findzeromq.cmake  findzmq.cmake  fmtlib.cmake  msgpack.cmake  rapidjson.cmake  spdlog.cmake  unwind.cmake  websocketpp.cmake
src/: base_types.hpp  common.hpp  deps.hpp  kraken.cpp  kraken.hpp  kraken_exchange.cpp  kraken_exchange.hpp  kraken_tick.hpp  macros.hpp  main.cpp  main.ts  ns_helper.hpp  orders_service.cpp  orders_service.hpp  templates.hpp  tick.cpp  tick.hpp  ticker_service.cpp  ticker_service.hpp  types.hpp
src/common/: base_types.hpp  macros.hpp  unmacros.hpp
src/orders/: kraken_exchange.cpp  kraken_exchange.hpp  orders_service.cpp
src/tick/: kraken_tick.cpp  kraken_tick.hpp  tick.cpp  tick.hpp  tick_types.hpp  ticker_service.cpp  ticker_service.hpp
